force-app/main/default/objects/Visit_Report__c/Visit_Report__c.object-meta.xml
<CustomObject>
    <description>As a user I want to be able to add a visit report with all needed information So I can keep my visit notes in a structured way</description>
    <label>Visit Report</label>
    <nameField>
        <label>Visit Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>