force-app/main/default/objects/Visit_Report__c/fields/Additional_attendance_to_the_meeting__c.field-meta.xml
<CustomField>
    <fullName>Additional_attendance_to_the_meeting__c</fullName>
    <label>Additional attendance to the meeting</label>
    <length>25</length>
    <type>Text</type>
</CustomField>