force-app/main/default/objects/Visit_Report__c/fields/Agenda_of_visit__c.field-meta.xml
<CustomField>
    <fullName>Agenda_of_visit__c</fullName>
    <label>Agenda of visit</label>
    <type>TextArea</type>
</CustomField>