force-app/main/default/objects/Visit_Report__c/fields/Attendance_Contact_person_in_meeting__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Contact_person_in_meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendance: Contact person in meeting</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visit Reports</relationshipLabel>
    <relationshipName>Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>