force-app/main/default/objects/Visit_Report__c/fields/Division_Multi__c.field-meta.xml
<CustomField>
    <fullName>Division_Multi__c</fullName>
    <label>Division</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Division</valueSetName>
    </valueSet>
</CustomField>