force-app/main/default/objects/Visit_Report__c/fields/EventName__c.field-meta.xml
<CustomField>
    <fullName>EventName__c</fullName>
    <label>EventName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>