force-app/main/default/objects/Visit_Report__c/fields/Linked_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Linked_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Visit Reports</relationshipLabel>
    <relationshipName>Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>