force-app/main/default/objects/Visit_Report__c/fields/Negative_feedback__c.field-meta.xml
<CustomField>
    <fullName>Negative_feedback__c</fullName>
    <label>Negative feedback</label>
    <type>TextArea</type>
</CustomField>