force-app/main/default/objects/Visit_Report__c/fields/Points_of_discussion_what_needs_to_be_d__c.field-meta.xml
<CustomField>
    <fullName>Points_of_discussion_what_needs_to_be_d__c</fullName>
    <label>Points of discussion:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Varia</fullName>
            </value>
            <value>
                <fullName>Pain Points</fullName>
            </value>
            <value>
                <fullName>Positive feedback</fullName>
            </value>
            <value>
                <fullName>Negative feedback</fullName>
            </value>
            <value>
                <fullName>Accomplishments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>