force-app/main/default/objects/Visit_Report__c/fields/Positive_feedback__c.field-meta.xml
<CustomField>
    <fullName>Positive_feedback__c</fullName>
    <label>Positive feedback</label>
    <type>TextArea</type>
</CustomField>