force-app/main/default/objects/Visit_Report__c/fields/Previous_visit_report__c.field-meta.xml
<CustomField>
    <fullName>Previous_visit_report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Liked to previous visit report from same account same user</description>
    <label>Previous visit report</label>
    <referenceTo>Visit_Report__c</referenceTo>
    <relationshipLabel>Visit Reports</relationshipLabel>
    <relationshipName>Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>