force-app/main/default/objects/Visit_Report__c/fields/Reason_for_visit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_visit__c</fullName>
    <label>Reason for visit</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>