force-app/main/default/objects/Visit_Report__c/fields/Related_Event__c.field-meta.xml
<CustomField>
    <fullName>Related_Event__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) &amp; EventId__c, EventName__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Event</label>
    <type>Text</type>
</CustomField>