force-app/main/default/objects/Visit_Report__c/fields/Type_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Visit__c</fullName>
    <label>Type of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Visit</valueSetName>
    </valueSet>
</CustomField>