force-app/main/default/objects/Visit_Report__c/fields/Visit_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Visit_Report_Name__c</fullName>
    <displayFormat>VR-{0000}</displayFormat>
    <label>Visit Report Name</label>
    <type>AutoNumber</type>
</CustomField>